erDiagram
  APPLICATION_USER {
    int id PK
    int version
    string user_name "unique"
    string passwd
    string role
    datetime last_status_check
    boolean active
  }

  USER_SUPERVISOR {
    int id PK
    int version
    int employee_id FK
    int supervisor_id FK
  }

  PURCHASE {
    int id PK
    int version
    int requester_id FK
    int approver_id FK "nullable"
    string status
    datetime created_at
    datetime decided_at "nullable"
    string decision_reason "nullable"
    string street
    string postal_code
    string city
    string country
  }

  PURCHASE_LINE {
    int id PK
    int version
    int purchase_id FK
    int product_id FK
    int quantity
    decimal unit_price
  }

  PRODUCT {
    int id PK
    int version
    string product_name
    decimal price
    int stock_count
    string availability
  }

  CATEGORY {
    int id PK
    int version
    string category_name "unique"
  }

  DRAFT {
    int id PK
    int version
    int product_id "not mapped as FK"
    int user_id FK
    string product_name
    decimal price
    int stock_count
    string availability
  }

  MESSAGE {
    int id PK
    int version
    string message
    datetime date_stamp
  }

  APPLICATION_USER ||--o{ PURCHASE : requester
  APPLICATION_USER o|--o{ PURCHASE : approver

  PURCHASE ||--|{ PURCHASE_LINE : lines
  PRODUCT  ||--o{ PURCHASE_LINE : product

  PRODUCT }o--o{ CATEGORY : product_category
  DRAFT   }o--o{ CATEGORY : draft_category

  APPLICATION_USER o|--|| DRAFT : draft_user

  APPLICATION_USER ||--o{ USER_SUPERVISOR : employee
  APPLICATION_USER ||--o{ USER_SUPERVISOR : supervisor
